Added buttons and questions

--- a/index.html
+++ b/index.html
@@ -6,9 +6,8 @@
     <title>Document</title>
 </head>
 <body>
-    <script src="./assets/js/style.js">
+    <script src="./assets/js/script.js">
     </script>
-<input type="text" id="question">
-    
+
 </body>
 </html>
